; ModuleID = '/home/carl/AnghaBench/systemd/src/tty-ask-password-agent/extr_tty-ask-password-agent.c_run.c'
source_filename = "/home/carl/AnghaBench/systemd/src/tty-ask-password-agent/extr_tty-ask-password-agent.c_run.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@arg_console = common dso_local global i64 0, align 8
@arg_device = common dso_local global i64 0, align 8
@arg_action = common dso_local global i64 0, align 8
@ACTION_QUERY = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8**)* @run to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @run(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %7 = call i32 (...) @log_setup_service()
  %8 = call i32 @umask(i32 18)
  %9 = load i32, i32* %4, align 4
  %10 = load i8**, i8*** %5, align 8
  %11 = call i32 @parse_argv(i32 %9, i8** %10)
  store i32 %11, i32* %6, align 4
  %12 = load i32, i32* %6, align 4
  %13 = icmp sle i32 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %2
  %15 = load i32, i32* %6, align 4
  store i32 %15, i32* %3, align 4
  br label %37

16:                                               ; preds = %2
  %17 = load i64, i64* @arg_console, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %25

19:                                               ; preds = %16
  %20 = load i64, i64* @arg_device, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %25, label %22

22:                                               ; preds = %19
  %23 = load i8**, i8*** %5, align 8
  %24 = call i32 @ask_on_consoles(i8** %23)
  store i32 %24, i32* %3, align 4
  br label %37

25:                                               ; preds = %19, %16
  %26 = load i64, i64* @arg_device, align 8
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %31

28:                                               ; preds = %25
  %29 = call i32 (...) @setsid()
  %30 = call i32 (...) @release_terminal()
  br label %31

31:                                               ; preds = %28, %25
  %32 = load i64, i64* @arg_action, align 8
  %33 = load i64, i64* @ACTION_QUERY, align 8
  %34 = icmp ne i64 %32, %33
  %35 = zext i1 %34 to i32
  %36 = call i32 @process_and_watch_password_files(i32 %35)
  store i32 %36, i32* %3, align 4
  br label %37

37:                                               ; preds = %31, %22, %14
  %38 = load i32, i32* %3, align 4
  ret i32 %38
}

declare dso_local i32 @log_setup_service(...) #1

declare dso_local i32 @umask(i32) #1

declare dso_local i32 @parse_argv(i32, i8**) #1

declare dso_local i32 @ask_on_consoles(i8**) #1

declare dso_local i32 @setsid(...) #1

declare dso_local i32 @release_terminal(...) #1

declare dso_local i32 @process_and_watch_password_files(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
